# probedev

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark.yml  release.yml  tests.yml
agents/skills/probe-idea/: SKILL.md
example/phonebook/: README.md  models.py  phonebook.py  storage.py
features/: README.md  glossary.md
features/commands/: add.feature  challenge.feature  discuss.feature  evolve.feature  identify.feature  list.feature  refine.feature  show.feature
pdd/: README.md
src/probedev/: __init__.py  __main__.py  cli.py  done.py  evolutions.py  identification.py  listing.py  plan.py  refinement.py  scanning.py  show.py
tests/: benchmark_list.py  benchmark_repo.py  conftest.py  test_cli.py
tests/bdd/: __init__.py  test_features.py
tests/bdd/steps/: __init__.py  commands.py
