[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "probedev"
version = "0.1.0"
description = "Command toolkit for code-first Probe-Driven Development."
requires-python = ">=3.9"

[project.scripts]
probe = "probedev.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
